--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lr10",
   "version": "0.1.0",
+  "homepage": "https://github.io/Neyasad/Kobyakovlr11",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
@@ -10,6 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
