setup gh-pages1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lr10",
   "version": "0.1.0",
-  "homepage": "https://github.io/Neyasad/Kobyakovlr11",
+  "homepage": "https://github.io/Neyasad/Kobyakovlr11/",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
